[package]
authors = ["Unbit s.a.s"]
description = "uWSGI and Rust integration plugin. \n"
license = "MIT"
name = "uwsgi_rust"
repository = "https://github.com/unbit/uwsgi-rust"
version = "0.0.1-dev"

[dependencies]
hyper = "0.8.0"
lazy_static = "0.1.15"
libc = "0.1"
libloading = "*"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.iron]
path = "../iron"

[lib]
crate-type = ["staticlib"]
name = "uwsgi_rust"
path = "plugin.rs"
